# K5TOOL

./: AssemblyInfo.cs  CMakeLists.txt  CommandHelper.cs  CommandLineParser.cs  Device.cs  FirmwareHelper.cs  K5TOOL.csproj  K5TOOL.sln  Logger.cs  Program.cs  README.md  Utils.cs  k5tool  launcher.debug.in  launcher.release.in
Packets/: Envelope.cs  FirmwareConstraints.cs  Packet.cs  PacketFlashBeaconAck.cs  PacketFlashVersionReq.cs  PacketFlashWriteAck.cs  PacketFlashWriteReq.cs  PacketHelloAck.cs  PacketHelloReq.cs  PacketHelloTestReq.cs  PacketReadAdcAck.cs  PacketReadAdcReq.cs  PacketReadEepromAck.cs  PacketReadEepromReq.cs  PacketReadRssiAck.cs  PacketReadRssiReq.cs  PacketRebootReq.cs  PacketWriteEepromAck.cs  PacketWriteEepromReq.cs  ProtocolBase.cs  ReadMe.txt
Packets/V2/: Packet2FlashBeaconAck.cs  Packet2FlashVersionReq.cs  Packet2FlashWriteAck.cs  Packet2FlashWriteReq.cs  ProtocolV2.cs
Packets/V5/: Packet5FlashBeaconAck.cs  Packet5FlashVersionReq.cs  Packet5FlashWriteAck.cs  Packet5FlashWriteReq.cs  ProtocolV5.cs
